--- a/Components/home/styles/layout.css
+++ b/Components/home/styles/layout.css
@@ -1,4 +1,14 @@
-*{
+@font-face {
+  font-family: "Poppins";
+  src: url("./Poppins-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Poppins Bold";
+  src: url("./Poppins-MediumItalic.ttf") format("truetype");
+}
+
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -11,8 +21,8 @@
   position: relative;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("background.jpeg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)),
+    url("../assets/background.jpeg");
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -26,54 +36,21 @@
   min-width: 20rem;
   border-radius: 1rem;
   height: 30%;
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between; */
 }
 
-.card *{
+.card * {
   margin: auto;
   text-align: center;
 }
 
-.card #title{
+.card #title {
   margin-top: 3rem;
   font-size: 2.2rem;
   color: white;
-  font-family: sans-serif;
-}
-.card #typing{
-  margin-top: 1rem;
-  font-size: 2.5rem;
-  position: relative;
-  color: rgb(255, 83, 83);
-  font-weight: bold;
-  text-transform: uppercase;
-  font-family: sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-.card #typing::after{
-  content: "";
-  position: absolute;
-  height: 3rem;
-  width: 0.2rem;
-  background-color: red;
-  animation: blinking 0.8s ease-in-out;
-  animation-iteration-count: infinite;
-}
-
-
-@keyframes blinking {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-.img-border{
+.img-border {
   height: 15vh;
   width: 15vh;
   background-color: white;
@@ -83,12 +60,12 @@
   justify-content: center;
 }
 
-.img-value{
+.img-value {
   height: 14vh;
   width: 14vh;
-  background-color: blue;
+  background-color: rgb(255, 50, 50);
   border-radius: 50%;
-  background-image: url('./gaurav-2.jpeg');
+  background-image: url("../assets/gaurav.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 15vh 15vh;
