--- a/general.css
+++ b/general.css
@@ -4,14 +4,18 @@
     box-sizing: border-box;
 }
 
+*::-webkit-scrollbar{
+    display: none;
+}
+
 body{
     background-color: #111111;
 }
 
 .widgets{
     display: flex;
-    height: 100vh;
-    width: 10vw;
+    height: 80vh;
+    width: 6vw;
     justify-content: space-between;
     align-items: center;
 }
@@ -20,4 +24,27 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.top-nav-bar{
+    height: 10vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    margin: 0 1rem;
+}
+
+.content{
+    width: 94vw;
+    height: 90vh;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+}
+
+.content section {
+    scroll-snap-align: start;
+    width: 100%;
+    height: 100%;
+    color: white;
 }
