--- a/nav-style.css
+++ b/nav-style.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+    text-decoration: none;
     justify-content: center;
     height: 3.5rem;
     width: 3.5rem;
