--- a/Styles/general.css
+++ b/Styles/general.css
@@ -1,105 +1,118 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    overflow: hidden;
-    scroll-behavior: smooth;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  scroll-behavior: smooth;
 }
 
-*::-webkit-scrollbar{
-    display: none;
+*::-webkit-scrollbar {
+  display: none;
 }
 
-*::selection{
-    background: #42e7bb;
+*::selection {
+  background: #42e7bb;
 }
 
-body{
-    background-color: #111111;
+body {
+  background-color: #111111;
 }
 
-.widgets{
-    display: flex;
-    height: 80vh;
-    width: 6vw;
-    justify-content: space-between;
-    align-items: center;
+.widgets {
+  display: flex;
+  height: 80vh;
+  width: 6vw;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.top-nav-bar{
-    height: 15vh;
-    width: 90vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.top-nav-bar {
+  height: 15vh;
+  width: 90vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.content{
-    width: 94vw;
-    height: 85vh;
-    overflow-y: scroll;
-    scroll-snap-type: y mandatory;
+.content {
+  width: 94vw;
+  height: 85vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
 }
 
 .content section {
-    scroll-snap-align: start;
-    width: 100%;
-    height: 100%;
-    color: white;
+  scroll-snap-align: start;
+  width: 100%;
+  height: 100%;
+  color: white;
+  position: relative;
 }
 
-button.btn{
-    background: transparent;
-    color: white;
-    border: none;
-    font-size: 1.2rem;
-    font-family: 'Poppins', sans-serif;
-    letter-spacing: 2px;
-    padding: 1rem 2.5rem;
-    cursor: pointer;
-    display: inline-block;
-    -webkit-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    transition: all 0.4s ease;
+.content section .line{
+    margin: auto;
+    position: absolute;
+    width: 90%;
+    height: 0.15rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    bottom: 5%;
+    background-color: white;
+}
+
+button.btn {
+  background: transparent;
+  color: white;
+  border: none;
+  font-size: 1.2rem;
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 2px;
+  padding: 0.5rem 2rem;
+  cursor: pointer;
+  display: inline-block;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  transition: all 0.4s ease;
   border: 0.1rem solid transparent;
 }
 
-button.btn{
-    overflow: hidden;
-    position: relative;
+button.btn {
+  overflow: hidden;
+  position: relative;
 }
 
-button.btn:hover p{
+button.btn p {
+  font-size: 300;
   -webkit-transition: all 0.4s ease;
   -moz-transition: all 0.4s ease;
   transition: all 0.4s ease;
 }
 
-button.btn:hover p{
+button.btn:hover p {
   transform: translateX(20%);
 }
 
 button.btn:after {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    -webkit-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-    width: 20%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    border: 0.1rem solid transparent;
-    background: rgba(154, 71, 255, 1);
+  content: "";
+  position: absolute;
+  z-index: -1;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  width: 40%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border: 0.1rem solid transparent;
+  background: rgba(154, 71, 255, 1);
 }
 
 button.btn:hover:after,
