--- a/Styles/general.css
+++ b/Styles/general.css
@@ -35,7 +35,7 @@ body {
 }
 
 .top-nav-bar {
-  height: 15vh;
+  height: 12vh;
   width: 90vw;
   display: flex;
   justify-content: space-between;
@@ -44,7 +44,7 @@ body {
 
 .content {
   width: 94vw;
-  height: 85vh;
+  height: 88vh;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
 }
@@ -52,39 +52,31 @@ body {
 .content section {
   scroll-snap-align: start;
   width: 100%;
-  height: 100%;
+  height: 98%;
   color: white;
   position: relative;
 }
 
-.content section .line{
+.content .line{
     margin: auto;
-    position: absolute;
+    margin-bottom: 1rem;
     width: 90%;
     height: 0.15rem;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    bottom: 5%;
     background-color: white;
 }
 
 button.btn {
   background: transparent;
   color: white;
-  border: none;
   font-size: 1.2rem;
   font-family: "Poppins", sans-serif;
   letter-spacing: 2px;
   padding: 0.5rem 2rem;
   cursor: pointer;
-  display: inline-block;
   -webkit-transition: all 0.4s ease;
   -moz-transition: all 0.4s ease;
   transition: all 0.4s ease;
   border: 0.1rem solid transparent;
-}
-
-button.btn {
   overflow: hidden;
   position: relative;
 }
