--- a/Styles/contact.css
+++ b/Styles/contact.css
@@ -26,6 +26,47 @@
 .contact-form #links{
     width: 30%;
     height: 100%;
+    display: flex;
+    padding: 2rem;
+    justify-content: space-between;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
+#links > .up-arrow{
+    background-color: #9A47FF;
+    width: 7rem;
+    height: 7rem;
+    margin-top: 2rem;
+    margin-right: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+#links > .up-arrow > img{
+    display: block;
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+#links > .links-contact{
+    width: 80%;
+    margin-bottom: 3rem;
+}
+
+#links > .links-contact > a{
+    display: block;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 2rem;
+    color: #9A47FF;
+    text-decoration: none;
+}
+
+#links > .links-contact > a:visited{
+    color: #9A47FF;
 }
 
 .contact-form #info > h1{
@@ -35,4 +76,47 @@
     font-size: 3rem;
     letter-spacing: 10%;
     line-height: 4rem;
+}
+
+.form{
+    width: 100%;
+    height: 70%;
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.form .form-field{
+    display: flex;
+    width: 100%;
+}
+
+.form-field p{
+    width: 15%;
+    margin-top: 1rem;
+    vertical-align: middle;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5rem;
+    margin-right: 1rem;
+}
+
+.form-field .input{
+    width: 80%;
+    height: 4rem;
+    outline: none;
+    font-size: 1.5rem;
+    padding: 2rem;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    background-color: transparent;
+    border: 0.2rem solid #9A47FF;
+}
+
+.form-field .input.multi-line{
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5rem;
+    height: 12rem;
+    resize: none;
+    padding: 1rem 2rem;
 }
