--- a/Styles/profile.css
+++ b/Styles/profile.css
@@ -1,76 +1,77 @@
-#profile{
-    margin: auto;
-    width: 95%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    font-family: 'Poppins', sans-serif;
+#profile {
+  margin: auto;
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  font-family: "Poppins", sans-serif;
 }
 
-#profile .image, #profile .text{
-    height: 90%;
-    width: 33%;
+#profile .image,
+#profile .text {
+  height: 90%;
+  width: 33%;
 }
 
-#profile .image{
-    border-radius: 0 3rem 0 3rem;
+#profile .image {
+  border-radius: 0 3rem 0 3rem;
 }
 
-#profile .design{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
+#profile .design {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
-#profile .image img{
-    width: 98%;
-    height: 100%;
-    border-radius: 0 3rem 0 3rem;
-    display: block;
+#profile .image img {
+  width: 98%;
+  height: 100%;
+  border-radius: 0 3rem 0 3rem;
+  display: block;
 }
 
-#profile .design img:first-child{
-    height: 1rem;
-    width: 1.5rem;
-    margin-bottom: 1rem;
+#profile .design img:first-child {
+  height: 1rem;
+  width: 1.5rem;
+  margin-bottom: 1rem;
 }
 
-#profile .design img:last-child{
-    height: 12rem;
-    width: 1.5rem;
+#profile .design img:last-child {
+  height: 12rem;
+  width: 1.5rem;
 }
 
-#profile .text h1{
-    font-weight: 500;
-    font-size: 5rem;
-    letter-spacing: 0.5rem;
-    text-transform: uppercase;
-    color: rgba(154, 71, 255, 1);
-    margin-bottom: 1rem;
+#profile .text h1 {
+  font-weight: 500;
+  font-size: 5rem;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+  color: rgba(154, 71, 255, 1);
+  margin-bottom: 1rem;
 }
 
-#profile .text p{
-    height: 80%;
-    font-weight: 400;   
-    font-size: 1rem;
-    line-height: 3rem;
-    text-align: start;
-    text-transform: uppercase;
-    overflow: scroll;
-    color: white;
+#profile .text p {
+  height: 80%;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 3rem;
+  text-align: start;
+  text-transform: uppercase;
+  overflow: scroll;
+  color: white;
 }
-#profile .text p > a{
-    text-decoration: none;
-    color: rgba(154, 71, 255, 1);
-}
-
-#profile .text p > a:visited{
-    text-decoration: none;
-    color: #42e7bb;
+#profile .text p > a {
+  text-decoration: none;
+  color: rgba(154, 71, 255, 1);
 }
 
-#profile .text p::selection{
-    background: #42e7bb;
-    color: #111111;
+#profile .text p > a:visited {
+  text-decoration: none;
+  color: #42e7bb;
+}
+
+#profile .text p::selection {
+  background: #42e7bb;
+  color: #111111;
 }
