--- a/Styles/profile.css
+++ b/Styles/profile.css
@@ -27,6 +27,8 @@
 #profile .image img {
   width: 98%;
   height: 100%;
+  max-width: 500px;
+  max-height: 710px;
   border-radius: 0 3rem 0 3rem;
   display: block;
 }
@@ -58,7 +60,7 @@
   line-height: 3rem;
   text-align: start;
   text-transform: uppercase;
-  overflow: scroll;
+  overflow-y: scroll;
   color: white;
 }
 #profile .text p > a {
@@ -74,4 +76,28 @@
 #profile .text p::selection {
   background: #42e7bb;
   color: #111111;
+}
+
+@media only screen and (max-width: 1465px) {
+  #profile .text h1{
+    font-size: 3rem;
+  }
+}
+
+@media only screen and (max-width: 1200px){
+  #profile .text p{
+    line-height: 2rem;
+    font-size: 0.8rem;
+  }
+}
+
+@media only screen and (max-width: 976px){
+  #profile .text h1{
+    font-size: 2.5rem;
+  }
+
+  #profile .text p{
+    line-height: 1.8rem;
+    font-size: 0.6rem;
+  }
 }
